tests/ui/did_you_mean/dont-suggest-doc-hidden-fields.stderr
error[E0609]: no field `hey` on type `A`
  --> $DIR/dont-suggest-doc-hidden-fields.rs:22:18
   |
LL |     A::default().hey;
   |                  ^^^
   |
   = note: available fields are: `hello`, `bye`

error[E0609]: no field `hey` on type `B`
  --> $DIR/dont-suggest-doc-hidden-fields.rs:28:37
   |
LL |     doc_hidden_fields::B::default().hey;
   |                                     ^^^
   |
   = note: available field is: `bye`

error[E0609]: no field `hey` on type `C`
  --> $DIR/dont-suggest-doc-hidden-fields.rs:32:18
   |
LL |     C::default().hey;
   |                  ^^^
   |
   = note: available fields are: `hello`, `bye`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0609`.
